# BMI_Calculator_Cpp

./: CMakeLists.txt  README.md  README.org
include/: calculator.h
include/glad/: glad.h
include/imgui/: imgui_impl_glfw.h  imgui_impl_opengl3.h  imgui_settings.h
src/: glad.c  main.cpp
